# canny-

./: CMakeLists.txt  README.md  main.cpp  myCanny.cpp  openmp.cpp  pthread.cpp  try.cpp
